Reviewer 2: Acknowledge impact of COVID-related literatue on OECD peak in 2020; and imprive discussion

--- a/analysis/manuscript.Rmd
+++ b/analysis/manuscript.Rmd
@@ -1439,15 +1439,16 @@ Figure \ref{fig:country_patch}A shows the development of hybrid open access publ
 The residual category "Other" includes the remaining countries. 
 Full counting was applied to account for multiple country affiliations [@Hottenrott_2021].
 Open access in hybrid journals increased in particular because of publications from authors affiliated with institutions from the OECD area, from `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018) |> pull(value) |> sum()` in 2018 to `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022) |> pull(value) |> sum()` in 2022. 
-This growth was largely driven by transformative agreements. The share of open access by agreement rose from `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(value) / country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(oa) * 100`% in 2018 (n = `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(value)`) to `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(value) / country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(oa) * 100`% (n = `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(value)`) in 2022.
+This growth was largely driven by transformative agreements. 
+The share of open access by agreement rose from `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(value) / country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(oa) * 100`% in 2018 (n = `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018, oa_type == "ta_oa") |> pull(value)`) to `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(value) / country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(oa) * 100`% (n = `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022, oa_type == "ta_oa") |> pull(value)`) in 2022.
 In contrast, BRICS recorded a low uptake, moderately growing from `r country_bar$data |> filter(cat == "BRICS", oa_type != "closed", cr_year == 2018) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2018 to `r country_bar$data |> filter(cat == "BRICS", oa_type != "closed", cr_year == 2022) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2022.  
 
-Despite the rise of open access across OECD countries, the overall publication output decreased sharply, dropping to `r country_bar$data |> filter(cat == "OECD", cr_year == "2022") |> distinct(all) |> pull(all)` in 2022 after peaking `r country_bar$data |> filter(cat == "OECD", cr_year == "2020") |> distinct(all) |> pull(all)` articles in 2020. 
+Despite the rise of open access across OECD countries, the overall publication output decreased sharply, dropping to `r country_bar$data |> filter(cat == "OECD", cr_year == "2022") |> distinct(all) |> pull(all)` in 2022 after peaking `r country_bar$data |> filter(cat == "OECD", cr_year == "2020") |> distinct(all) |> pull(all)` articles in 2020, which saw a massive growth in literature related to COVID-19, driven largely by researchers in the United States surpassing China and other countries [@Ioannidis_2021].
 In stark contrast, the number of articles published in hybrid journals by first authors affiliated with institutions from BRICS countries increased steadily over the years, from `r country_bar$data |> filter(cat == "BRICS", cr_year == "2018") |> distinct(all) |> pull(all)` in 2018 to `r country_bar$data |> filter(cat == "BRICS", cr_year == "2022") |> distinct(all) |> pull(all)` in 2022. 
 This resulted in an increase in market share of the BRICS area from `r country_bar$data |> filter(cat == "BRICS", cr_year == "2018") |> distinct(all, yearly_volume) |> mutate(prop = all /yearly_volume) |> pull(prop) * 100`% to `r country_bar$data |> filter(cat == "BRICS", cr_year == "2022") |> distinct(all, yearly_volume) |> mutate(prop = all /yearly_volume) |> pull(prop) * 100`% between 2018 and 2022, whereas that of the OECD area decreased from `r country_bar$data |> filter(cat == "OECD", cr_year == "2018") |> distinct(all, yearly_volume) |> mutate(prop = all /yearly_volume) |> pull(prop) * 100`% to `r country_bar$data |> filter(cat == "OECD", cr_year == "2022") |> distinct(all, yearly_volume) |> mutate(prop = all /yearly_volume) |> pull(prop) * 100`% during the same period.
 Upon closer examination, this trend can be observed across all of the three largest publishers, although the shift towards BRICS is particularly evident in Elsevier's hybrid journal portfolio, particularly with regard to articles published in Physical Sciences journals. 
 While OECD publication output in Elsevier's Physical Sciences journals declined from `r publ_subject_output_df |> filter(cr_year == 2018, top_level == "Physical Sciences", publisher == "Elsevier", cat == "OECD") |> pull(all)` articles in 2018 to `r publ_subject_output_df |> filter(cr_year == 2022, top_level == "Physical Sciences", publisher == "Elsevier", cat == "OECD") |> pull(all)` in 2022, BRICS output increased from `r publ_subject_output_df |> filter(cr_year == 2018, top_level == "Physical Sciences", publisher == "Elsevier", cat == "BRICS") |> pull(all)` to `r publ_subject_output_df |> filter(cr_year == 2022, top_level == "Physical Sciences", publisher == "Elsevier", cat == "BRICS") |> pull(all)` in the same five-year period.
-Furthermore, OECD publication output in Health Sciences and Life Sciences journals stagnated after peaking in 2020. 
+Furthermore, OECD publication output in Health Sciences and Life Sciences journals stagnated after peaking in 2020, which saw an increase in publications due to the impact of the global COVID-19 pandemic, in particular from the United States [@Ioannidis_2021]. 
 
 To illustrate the situation in 2022, Figure \ref{fig:country_patch}B compares the total publication output with the number of open access articles. 
 With `r country_scatter_df |> filter(cr_year == "2022", country_code == "CN") |> pull(all)` articles, China was the most productive country, followed by the United States (n = `r country_scatter_df |> filter(cr_year == "2022", country_code == "US") |> pull(all)`) and India (n = `r country_scatter_df |> filter(cr_year == "2022", country_code == "IN") |> pull(all)`). 
@@ -1541,12 +1542,12 @@ One is to complement this large-scale study with more specific evidence from ind
 Incorporating full open access and subscription-based journals, as well as considering global trends in scholarly migration and collaboration could also be promising.
 Financial studies could build on the study design and include subscription and open access expenditure to assess the cost-effectiveness of transformative agreements, in particular whether transformative agreements can integrate the substantial amounts of individual payments for publication fees [@Wenaas_2022; @Butler_2023], as well as potential changes in authors' behaviour following the introduction of these agreements [@Schmal_2024].
 
-This study has practical implications for research funding and libraries. 
+This study has practical implications for research funding and libraries.
 Of primary concern should be the observed differences across countries, particularly the relationship between socio-economic development and open access adoption.
-In the last years, there was a notable increase in the number of closed access articles published in hybrid journals by authors from countries such as China and India, where transformative agreements and open access funding options were not widely available. 
-In contrast, transformative agreements enabled a substantial increase in open access in OECD countries excluding the US, while their share of total articles in hybrid journals decreased. 
-This imbalance, where open access uptake depends largely on a few less productive high-income countries, makes it increasingly unlikely that collective action towards a large-scale transition of hybrid journals to full open access through transformation agreements will be successful. 
-Rather, it highlights the importance of ongoing evaluation and adaptation of open access strategies in view of global publishing trends.
+Between 2018 and 2022, there was a notable increase in the number of closed access articles published in hybrid journals by authors from countries such as China and India, where transformative agreements and open access funding options were not widely available.
+In contrast, the introduction of country-wide transformative agreements in numerous OECD countries led to a substantial increase in open access, while their share of total articles in hybrid journals decreased.
+This imbalance, whereby open access uptake depends largely on a few countries, makes it less likely that collective action towards a large-scale transition of hybrid journals to full open access through transformation agreements will succeed within the next years.
+Rather, and in accordance with recent policy recommendations from the UK and Nordic countries [@Jisc_2024; @Widding_2024], it emphasises the importance of ongoing evaluation and adaptation of open access strategies in view of global publishing trends. 
 
 From a data perspective, research institutions and funders need to push towards price transparency in scholarly publishing to enable these evaluations. 
 The reporting of open access funding, including transformative agreements, is also not harmonised, but often crowd-sourced from various sources.
