--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1,7 +1,7 @@
 @misc{goldoa,
   author       = {Bruns, Andre and Cakir, Yusuf and Kaya, Sibel and Beidaghi, Samaneh},
   publisher    = {Bielefeld University},
-  title        = {{ISSN-Matching of Gold OA Journals (ISSN-GOLD-OA) 5.0}},
+  title        = {{ISSN-matching of Gold OA journals (ISSN-GOLD-OA) 5.0}},
   url          = {https://pub.uni-bielefeld.de/record/2961544},
   doi          = {10.4119/unibi/2961544},
   year         = {2022},
@@ -65,7 +65,7 @@ doi = {doi/10.2777/89349}}
 
 @article{Huang_2020, title={Evaluating the impact of open access policies on research institutions}, volume={9}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/eLife.57067}, DOI={10.7554/elife.57067}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Huang, Chun-Kai (Karl) and Neylon, Cameron and Hosking, Richard and Montgomery, Lucy and Wilson, Katie S and Ozaygen, Alkim and Brookes-Kenworthy, Chloe}, year={2020}, month=sep }
 
-@article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by {Finnish} researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
+@article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by {{Finnish}} researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
 
 @article{Wenaas_2022, title={Choices of immediate open access and the relationship to journal ranking and publish-and-read deals}, volume={7}, ISSN={2504-0537}, url={http://dx.doi.org/10.3389/frma.2022.943932}, DOI={10.3389/frma.2022.943932}, journal={Frontiers in Research Metrics and Analytics}, publisher={Frontiers Media SA}, author={Wenaas, Lars}, year={2022}, month=oct }
 @article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using {R} (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
@@ -88,7 +88,7 @@ doi = {doi/10.2777/89349}}
     url = {https://github.com/subugoe/hoaddata/releases/tag/v0.2.91}}
 
   @Manual{bigrquery,
-    title = {bigrquery: An Interface to Google's 'BigQuery' 'API'},
+    title = {{bigrquery: An interface to Google's 'BigQuery' 'API'}},
     author = {Hadley Wickham and Jennifer Bryan},
     year = {2023},
     note = {R package version 1.4.2},
@@ -676,7 +676,7 @@ year = {2020}
   number = {4}, 
   pages = {1396--1428}, 
   author = {Janne Pölönen and Mikael Laakso and Raf Guns and Emanuel Kulczycki and Gunnar Sivertsen}, 
-  title = {Open access at the national level: A comprehensive analysis of publications by Finnish researchers}, 
+  title = {Open access at the national level: A comprehensive analysis of publications by {Finnish} researchers}, 
   journal = {Quantitative Science Studies}
 }
 
@@ -690,7 +690,7 @@ year = {2020}
   number = {3},
   pages = {819--841},
   author = {Alberto Martín-Martín and Rodrigo Costas and Thed van Leeuwen and Emilio Delgado López-Cózar},
-  title = {Evidence of open access of scientific publications in Google Scholar: A large-scale analysis},
+  title = {Evidence of open access of scientific publications in {Google Scholar}: A large-scale analysis},
   journal = {Journal of Informetrics}
 }
 
@@ -1056,7 +1056,7 @@ associated authors}},
 }
 
 @article{Chinchilla_Rodr_guez_2024,
-  title={Examining the quality of the corresponding authorship field in Web of Science and Scopus},
+  title={Examining the quality of the corresponding authorship field in {Web of Science} and {Scopus}},
   volume={5},
   ISSN={2641-3337},
   url={http://dx.doi.org/10.1162/qss_a_00288},
@@ -1100,3 +1100,31 @@ associated authors}},
   doi          = {10.5281/zenodo.7105355},
   url          = {https://doi.org/10.5281/zenodo.7105355}
 }
+
+@article{Ioannidis_2021,
+  title={The rapid, massive growth of COVID-19 authors in the scientific literature}, 
+  volume={8}, 
+  ISSN={2054-5703}, 
+  url={http://dx.doi.org/10.1098/rsos.210389}, 
+  DOI={10.1098/rsos.210389}, 
+  number={9}, 
+  journal={Royal Society Open Science}, 
+  publisher={The Royal Society}, 
+  author={Ioannidis, John P. A. and Salholz-Hillel, Maia and Boyack, Kevin W. and Baas, Jeroen}, 
+  year={2021}, 
+  month=sep 
+  }
+  
+  @article{Owens_2024, 
+    title={China’s research clout leads to growth in homegrown science publishing},
+    volume={630},
+    ISSN={1476-4687},
+    url={http://dx.doi.org/10.1038/d41586-024-01596-2},
+    DOI={10.1038/d41586-024-01596-2},
+    number={8015},
+    journal={Nature},
+    publisher={Springer Science and Business Media LLC},
+    author={Owens, Brian}, year={2024}, 
+    month=jun, 
+    pages={S2–S4}
+    }
